--- a/blog.html
+++ b/blog.html
@@ -1,55 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Bienes Raices</title>
+		<link rel="stylesheet" href="build/css/app.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienes Raices</title>
-    <link rel="stylesheet" href="build/css/app.css">
-</head>
+	<body>
+		<header class="header">
+			<div class="contenedor contenido-header">
+				<div class="barra">
+					<a href="/">
+						<img
+							id="logo"
+							src="build/img/logo.svg"
+							alt="Logotipo de Bienes Raices"
+						/>
+					</a>
 
-<body>
+					<nav class="navegacion">
+						<a href="nosotros.html">Nosotros</a>
+						<a href="anuncios.html">Anuncios</a>
+						<a href="blog.html">Blog</a>
+						<a href="contacto.html">Contacto</a>
+					</nav>
+				</div>
+			</div>
+		</header>
 
-    <header class="header">
-        <div class="contenedor contenido-header">
-            <div class="barra">
-                <a href="/">
-                    <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
-                </a>
+		<main class="contenedor seccion contenido-centrado">
+			<h1>Nuestro Blog</h1>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<a href="entrada.html">
+						<picture>
+							<source srcset="build/img/blog1.webp" type="image/webp" />
+							<source srcset="build/img/blog1.jpg" type="image/jpeg" />
+							<img
+								loading="lazy"
+								src="build/img/blog1.jpg"
+								alt="Texto Entrada
+							Blog"
+							/>
+						</picture>
+					</a>
+				</div>
+				<div class="texto-entrada">
+					<a href="entrada.html">
+						<h4>Terraza en el techo de tu casa</h4>
+						<p>Escrito el <span>20/10/2021</span> por <span>Admin</span></p>
+						<p>
+							Consejos para contruir una terraza en el techo de tu casa con los
+							mejores materialies y ahorrando dinero
+						</p>
+					</a>
+				</div>
+			</article>
 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<a href="entrada.html">
+						<picture>
+							<source srcset="build/img/blog2.webp" type="image/webp" />
+							<source srcset="build/img/blog2.jpg" type="image/jpeg" />
+							<img
+								loading="lazy"
+								src="build/img/blog2.jpg"
+								alt="Texto Entrada Blog"
+							/> </picture
+					></a>
+				</div>
+				<div class="texto-entrada">
+					<a href="entrada.html">
+						<h4>Guía para la decoración de tu hogar</h4>
+						<p>Escrito el <span>20/10/2021</span> por <span>Admin</span></p>
+						<p>
+							Maximiza el espacio de tu hogar con esta guía, aprende a cambiar
+							muebles y colores para darle vida a tu espacio
+						</p>
+					</a>
+				</div>
+			</article>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<a href="entrada.html">
+						<picture>
+							<source srcset="build/img/blog3.webp" type="image/webp" />
+							<source srcset="build/img/blog3.jpg" type="image/jpeg" />
+							<img
+								loading="lazy"
+								src="build/img/blog3.jpg"
+								alt="Texto Entrada
+							Blog"
+							/>
+						</picture>
+					</a>
+				</div>
+				<div class="texto-entrada">
+					<a href="entrada.html">
+						<h4>Terraza en el techo de tu casa</h4>
+						<p>Escrito el <span>20/10/2021</span> por <span>Admin</span></p>
+						<p>
+							Consejos para contruir una terraza en el techo de tu casa con los
+							mejores materialies y ahorrando dinero
+						</p>
+					</a>
+				</div>
+			</article>
 
-            </div>
-            <h1>Venta de Vasas y Departamentos Exclusivos de Lujo</h1>
-        </div>
-    </header>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<a href="entrada.html">
+						<picture>
+							<source srcset="build/img/blog4.webp" type="image/webp" />
+							<source srcset="build/img/blog4.jpg" type="image/jpeg" />
+							<img
+								loading="lazy"
+								src="build/img/blog4.jpg"
+								alt="Texto Entrada Blog"
+							/>
+						</picture>
+					</a>
+				</div>
+				<div class="texto-entrada">
+					<a href="entrada.html">
+						<h4>Guía para la decoración de tu hogar</h4>
+						<p>Escrito el <span>20/10/2021</span> por <span>Admin</span></p>
+						<p>
+							Maximiza el espacio de tu hogar con esta guía, aprende a cambiar
+							muebles y colores para darle vida a tu espacio
+						</p>
+					</a>
+				</div>
+			</article>
+		</main>
+		<footer class="footer seccion">
+			<div class="contenedor contenedor-footer">
+				<nav class="navegacion">
+					<a href="nosotros.html">Nosotros</a>
+					<a href="anuncios.html">Anuncios</a>
+					<a href="blog.html">Blog</a>
+					<a href="contacto.html">Contacto</a>
+				</nav>
+			</div>
+			<p class="copyright">Todos los derechos reservados 2021 &copy;</p>
+		</footer>
 
-    <main class="contenedor seccion">
-        <h1>Título Página</h1>
-
-
-    </main>
-    <footer class="footer seccion">
-        <div class="contenedor contenedor-footer">
-            <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
-                <a href="contacto.html">Contacto</a>
-            </nav>
-        </div>
-        <p class="copyright">Todos los derechos reservados 2021 &copy;</p>
-
-    </footer>
-
-    <script src="build/js/bundle.min.js "></script>
-
-</body>
-
+		<script src="build/js/bundle.min.js "></script>
+	</body>
 </html>
