--- a/contacto.html
+++ b/contacto.html
@@ -1,55 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Bienes Raices</title>
+		<link rel="stylesheet" href="build/css/app.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienes Raices</title>
-    <link rel="stylesheet" href="build/css/app.css">
-</head>
+	<body>
+		<header class="header">
+			<div class="contenedor contenido-header">
+				<div class="barra">
+					<a href="/">
+						<img
+							id="logo"
+							src="build/img/logo.svg"
+							alt="Logotipo de Bienes Raices"
+						/>
+					</a>
 
-<body>
+					<nav class="navegacion">
+						<a href="nosotros.html">Nosotros</a>
+						<a href="anuncios.html">Anuncios</a>
+						<a href="blog.html">Blog</a>
+						<a href="contacto.html">Contacto</a>
+					</nav>
+				</div>
+			</div>
+		</header>
 
-    <header class="header">
-        <div class="contenedor contenido-header">
-            <div class="barra">
-                <a href="/">
-                    <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
-                </a>
+		<main class="contenedor seccion">
+			<h1>Contacto</h1>
 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+			<picture>
+				<source srcset="build/img/destacada3.webp" type="image/webp" />
+				<source srcset="build/img/destacada3.jpg" type="image/jpeg" />
+				<img
+					loading="lazy"
+					src="build/img/destacada3.jpg"
+					alt="Imagen contacto"
+				/>
+			</picture>
 
-            </div>
-            <h1>Venta de Vasas y Departamentos Exclusivos de Lujo</h1>
-        </div>
-    </header>
+			<h2>Llene el formulario de contacto</h2>
 
-    <main class="contenedor seccion">
-        <h1>Título Página</h1>
+			<form action="" class="formulario">
+				<fieldset>
+					<legend>Información Personal</legend>
+					<label for="nombre">Nombre</label>
+					<input type="text" placeholder="Tu Nombre" id="nombre" />
+					<label for="email">E-Mail</label>
+					<input type="email" placeholder="Tu E-Mail" id="email" />
+					<label for="tel">Teléfono</label>
+					<input type="tel" placeholder="Tu Telefono" id="tel" />
+					<label for="msg">Mensaje</label>
+					<textarea id="msg"></textarea>
+				</fieldset>
+				<fieldset>
+					<legend>Información sobre la Propiedad</legend>
+					<label for="vende-compra">Vende o Compra</label>
+					<select id="vende-compra">
+						<option value="" disabled selected>--Seleccione--</option>
+						<option value="compra">Compra</option>
+						<option value="vende">Vende</option>
+					</select>
+					<label for="precio">Precio o Presupuesto</label>
+					<input type="number" placeholder="Precio o Presupuesto" id="precio" />
+				</fieldset>
+				<fieldset>
+					<legend>Contacto</legend>
+					<p>Cómo desea ser contactado</p>
+					<div class="forma-contacto">
+						<label for="contactar-telefono">Teléfono</label>
+						<input
+							name="contacto"
+							type="radio"
+							value="telefono"
+							id="contactar-telefono"
+						/>
 
+						<label for="contactar-email">E-mail</label>
+						<input
+							name="contacto"
+							type="radio"
+							value="telefono"
+							id="contactar-email"
+						/>
+					</div>
+					<p>
+						Si eligió teléfono, elija la fecha y la hora para ser contactado
+					</p>
+					<label for="fecha">Fecha</label>
+					<input type="date" id="fecha" />
+					<label for="hora">Hora</label>
+					<input type="time" id="hora" min="09:00" max="18:00" />
+				</fieldset>
 
-    </main>
-    <footer class="footer seccion">
-        <div class="contenedor contenedor-footer">
-            <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
-                <a href="contacto.html">Contacto</a>
-            </nav>
-        </div>
-        <p class="copyright">Todos los derechos reservados 2021 &copy;</p>
+				<input type="submit" value="Enviar" class="boton-verde" />
+			</form>
+		</main>
+		<footer class="footer seccion">
+			<div class="contenedor contenedor-footer">
+				<nav class="navegacion">
+					<a href="nosotros.html">Nosotros</a>
+					<a href="anuncios.html">Anuncios</a>
+					<a href="blog.html">Blog</a>
+					<a href="contacto.html">Contacto</a>
+				</nav>
+			</div>
+			<p class="copyright">Todos los derechos reservados 2021 &copy;</p>
+		</footer>
 
-    </footer>
-
-    <script src="build/js/bundle.min.js "></script>
-
-</body>
-
+		<script src="build/js/bundle.min.js "></script>
+	</body>
 </html>
