--- a/index.html
+++ b/index.html
@@ -1,55 +1,345 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Bienes Raices</title>
+		<link rel="stylesheet" href="build/css/app.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienes Raices</title>
-    <link rel="stylesheet" href="build/css/app.css">
-</head>
+	<body>
+		<header class="header inicio">
+			<div class="contenedor contenido-header">
+				<div class="barra">
+					<a href="/">
+						<img
+							id="logo"
+							src="build/img/logo.svg"
+							alt="Logotipo de Bienes Raices"
+						/>
+					</a>
 
-<body>
+					<div class="mobile-menu">
+						<img src="build/img/barras.svg" alt="Icono Menu responsive" />
+					</div>
+					<div class="derecha">
+						<img
+							src="/build/img/dark-mode.svg"
+							alt="Dark mode Button "
+							class="darkmode-boton"
+						/>
+						<nav class="navegacion">
+							<a href="nosotros.html">Nosotros</a>
+							<a href="anuncios.html">Anuncios</a>
+							<a href="blog.html">Blog</a>
+							<a href="contacto.html">Contacto</a>
+						</nav>
+					</div>
+				</div>
+				<h1>Venta de Vasas y Departamentos Exclusivos de Lujo</h1>
+			</div>
+		</header>
 
-    <header class="header inicio">
-        <div class="contenedor contenido-header">
-            <div class="barra">
-                <a href="/">
-                    <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
-                </a>
+		<main class="contenedor seccion">
+			<h1>Más sobre nosotros</h1>
 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+			<div class="iconos-nosotros">
+				<div class="icono">
+					<img
+						src="build/img/icono1.svg"
+						alt="Icono seguridad"
+						loading="lazy"
+					/>
+					<h3>Seguridad</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at
+						non, architecto facere autem quam sint ut est totam quis libero
+						quisquam adipisci error nam iure consectetur magnam. Expedita,
+						labore.
+					</p>
+				</div>
+				<div class="icono">
+					<img src="build/img/icono2.svg" alt="Icono precio" loading="lazy" />
+					<h3>Precio</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at
+						non, architecto facere autem quam sint ut est totam quis libero
+						quisquam adipisci error nam iure consectetur magnam. Expedita,
+						labore.
+					</p>
+				</div>
+				<div class="icono">
+					<img src="build/img/icono3.svg" alt="Icono tiempo" loading="lazy" />
+					<h3>Tiempo</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at
+						non, architecto facere autem quam sint ut est totam quis libero
+						quisquam adipisci error nam iure consectetur magnam. Expedita,
+						labore.
+					</p>
+				</div>
+			</div>
+		</main>
 
-            </div>
-            <h1>Venta de Vasas y Departamentos Exclusivos de Lujo</h1>
-        </div>
-    </header>
+		<section class="seccion contenedor">
+			<h2>Casas y Departamentos en Venta</h2>
+			<div class="contenedor-anuncios">
+				<div class="anuncio">
+					<picture>
+						<source srcset="build/img/anuncio1.webp" type="image/webp" />
+						<source srcset="build/img/anuncio1.jpg" type="image/jpeg" />
+						<img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio" />
+					</picture>
+					<div class="contenido-anuncio">
+						<h3>Casa de Lujo en el Lago</h3>
+						<p>
+							Casa en el lago con exelente vista, acabados de lujo a un exelente
+							precio
+						</p>
+						<p class="precio">$3,000,000</p>
+						<ul class="iconos-caracteristicas">
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_wc.svg"
+									alt="icono WC"
+								/>
+								<p>3</p>
+							</li>
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_estacionamiento.svg"
+									alt="icono Estacionamiento"
+								/>
+								<p>3</p>
+							</li>
 
-    <main class="contenedor seccion">
-        <h1>Título Página</h1>
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_dormitorio.svg"
+									alt="icono Habitaciones"
+								/>
+								<p>4</p>
+							</li>
+						</ul>
 
+						<a href="anuncio.html" class="boton-amarillo-block">
+							Ver Propiedad
+						</a>
+					</div>
+					<!--contenedor-anuncio-->
+				</div>
+				<!---anuncio-->
+				<div class="anuncio">
+					<picture>
+						<source srcset="build/img/anuncio2.webp" type="image/webp" />
+						<source srcset="build/img/anuncio2.jpg" type="image/jpeg" />
+						<img loading="lazy" src="build/img/anuncio2.jpg" alt="anuncio" />
+					</picture>
+					<div class="contenido-anuncio">
+						<h3>Casa de Lujo en el Lago</h3>
+						<p>
+							Casa en el lago con exelente vista, acabados de lujo a un exelente
+							precio
+						</p>
+						<p class="precio">$3,000,000</p>
+						<ul class="iconos-caracteristicas">
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_wc.svg"
+									alt="icono WC"
+								/>
+								<p>3</p>
+							</li>
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_estacionamiento.svg"
+									alt="icono Estacionamiento"
+								/>
+								<p>3</p>
+							</li>
 
-    </main>
-    <footer class="footer seccion">
-        <div class="contenedor contenedor-footer">
-            <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
-                <a href="contacto.html">Contacto</a>
-            </nav>
-        </div>
-        <p class="copyright">Todos los derechos reservados 2021 &copy;</p>
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_dormitorio.svg"
+									alt="icono Habitaciones"
+								/>
+								<p>4</p>
+							</li>
+						</ul>
 
-    </footer>
+						<a href="anuncio.html" class="boton-amarillo-block">
+							Ver Propiedad
+						</a>
+					</div>
+					<!--contenedor-anuncio-->
+				</div>
+				<!---anuncio-->
+				<div class="anuncio">
+					<picture>
+						<source srcset="build/img/anuncio3.webp" type="image/webp" />
+						<source srcset="build/img/anuncio3.jpg" type="image/jpeg" />
+						<img loading="lazy" src="build/img/anuncio3.jpg" alt="anuncio" />
+					</picture>
+					<div class="contenido-anuncio">
+						<h3>Casa de Lujo en el Lago</h3>
+						<p>
+							Casa en el lago con exelente vista, acabados de lujo a un exelente
+							precio
+						</p>
+						<p class="precio">$3,000,000</p>
+						<ul class="iconos-caracteristicas">
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_wc.svg"
+									alt="icono WC"
+								/>
+								<p>3</p>
+							</li>
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_estacionamiento.svg"
+									alt="icono Estacionamiento"
+								/>
+								<p>3</p>
+							</li>
 
-    <script src="build/js/bundle.min.js "></script>
+							<li>
+								<img
+									class="icon"
+									loading="lazy"
+									src="build/img/icono_dormitorio.svg"
+									alt="icono Habitaciones"
+								/>
+								<p>4</p>
+							</li>
+						</ul>
 
-</body>
+						<a href="anuncio.html" class="boton-amarillo-block">
+							Ver Propiedad
+						</a>
+					</div>
+					<!--contenedor-anuncio-->
+				</div>
+				<!---anuncio-->
+			</div>
+			<!--contenedor-anuncios-->
 
+			<div class="alinear-derecha">
+				<a href="anuncios.html" class="boton-verde">Ver Todas</a>
+			</div>
+		</section>
+
+		<section class="imagen-contacto">
+			<h2>Encuentra la casa de tu sueños</h2>
+			<p>
+				Llena el formulario de contacto y el asesor se contactará contigo a la
+				berevedad
+			</p>
+			<div class="alinear-derecha">
+				<a href="contacto.html" class="boton-amarillo">Contáctanos</a>
+			</div>
+		</section>
+
+		<div class="contenedor seccion seccion-inferior">
+			<section class="blog">
+				<h3>Nuestro Blog</h3>
+				<article class="entrada-blog">
+					<div class="imagen">
+						<picture>
+							<source srcset="build/img/blog1.webp" type="image/webp" />
+							<source srcset="build/img/blog1.jpg" type="image/jpeg" />
+							<img
+								loading="lazy"
+								src="build/img/blog1.jpg"
+								alt="Texto Entrada
+							Blog"
+							/>
+						</picture>
+					</div>
+					<div class="texto-entrada">
+						<a href="entrada.html">
+							<h4>Terraza en el techo de tu casa</h4>
+							<p class="informacion-meta">
+								Escrito el <span>20/10/2021</span> por <span>Admin</span>
+							</p>
+							<p>
+								Consejos para contruir una terraza en el techo de tu casa con
+								los mejores materialies y ahorrando dinero
+							</p>
+						</a>
+					</div>
+				</article>
+
+				<article class="entrada-blog">
+					<div class="imagen">
+						<picture>
+							<source srcset="build/img/blog2.webp" type="image/webp" />
+							<source srcset="build/img/blog2.jpg" type="image/jpeg" />
+							<img
+								loading="lazy"
+								src="build/img/blog2.jpg"
+								alt="Texto Entrada Blog"
+							/>
+						</picture>
+					</div>
+					<div class="texto-entrada">
+						<a href="entrada.html">
+							<h4>Guía para la decoración de tu hogar</h4>
+							<p class="informacion-meta">
+								Escrito el <span>20/10/2021</span> por <span>Admin</span>
+							</p>
+							<p>
+								Maximiza el espacio de tu hogar con esta guía, aprende a cambiar
+								muebles y colores para darle vida a tu espacio
+							</p>
+						</a>
+					</div>
+				</article>
+			</section>
+			<section class="testimoniales">
+				<h3>Testimoniales</h3>
+				<div class="testimonial">
+					<img class="comilla" src="/build/img/comilla.svg" alt="comilla" />
+
+					<blockquote>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+						autem dolorem sunt odio debitis similique qui saepe nemo, aspernatur
+						et ab repellat at.
+					</blockquote>
+					<p class="alinear-derecha">-Pasquale Lino</p>
+				</div>
+			</section>
+		</div>
+
+		<footer class="footer seccion">
+			<div class="contenedor contenedor-footer">
+				<nav class="navegacion">
+					<a href="nosotros.html">Nosotros</a>
+					<a href="anuncios.html">Anuncios</a>
+					<a href="blog.html">Blog</a>
+					<a href="contacto.html">Contacto</a>
+				</nav>
+			</div>
+			<p class="copyright">Todos los derechos reservados 2021 &copy;</p>
+		</footer>
+
+		<script src="build/js/bundle.min.js "></script>
+	</body>
 </html>
