--- a/nosotros.html
+++ b/nosotros.html
@@ -1,55 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Bienes Raices</title>
+		<link rel="stylesheet" href="build/css/app.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienes Raices</title>
-    <link rel="stylesheet" href="build/css/app.css">
-</head>
+	<body>
+		<header class="header">
+			<div class="contenedor contenido-header">
+				<div class="barra">
+					<a href="/">
+						<img
+							id="logo"
+							src="build/img/logo.svg"
+							alt="Logotipo de Bienes Raices"
+						/>
+					</a>
 
-<body>
+					<nav class="navegacion">
+						<a href="nosotros.html">Nosotros</a>
+						<a href="anuncios.html">Anuncios</a>
+						<a href="blog.html">Blog</a>
+						<a href="contacto.html">Contacto</a>
+					</nav>
+				</div>
+			</div>
+		</header>
 
-    <header class="header">
-        <div class="contenedor contenido-header">
-            <div class="barra">
-                <a href="/">
-                    <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
-                </a>
+		<main class="contenedor seccion">
+			<h1>Conoce más sobre nosotros</h1>
 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
-                </nav>
+			<div class="contenido-nosotros">
+				<div class="imagen">
+					<picture>
+						<source srcset="/build/img/nosotros.webp" type="image/webp" />
+						<source srcset="/build/img/nosotros.jpg" type="image/jpeg" />
+						<img
+							loading="lazy"
+							src="/build/img/nosotros.jpg"
+							alt="Sobre Nosotros"
+						/>
+					</picture>
+				</div>
+				<div class="texto-nosotros">
+					<blockquote>25 Años de experiencia</blockquote>
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam nisi
+						sapiente fugit quisquam quo. Ipsam iste laborum eaque dolorem soluta
+						impedit hic, dolores ratione aliquid in aliquam sapiente, nemo
+						porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+						Ipsam nisi sapiente fugit quisquam quo. Ipsam iste laborum eaque
+						dolorem soluta impedit hic, dolores ratione aliquid in aliquam
+						sapiente, nemo porro.
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos iusto
+						saepe molestias porro culpa obcaecati dolorem, dolorum possimus non
+						tempore quia quod, at iste ipsum soluta consequuntur minima quasi
+						in.
+					</p>
+				</div>
+			</div>
+		</main>
+		<section class="contenedor seccion">
+			<h1>Más sobre nosotros</h1>
 
-            </div>
-            <h1>Venta de Vasas y Departamentos Exclusivos de Lujo</h1>
-        </div>
-    </header>
+			<div class="iconos-nosotros">
+				<div class="icono">
+					<img
+						src="build/img/icono1.svg"
+						alt="Icono seguridad"
+						loading="lazy"
+					/>
+					<h3>Seguridad</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at
+						non, architecto facere autem quam sint ut est totam quis libero
+						quisquam adipisci error nam iure consectetur magnam. Expedita,
+						labore.
+					</p>
+				</div>
+				<div class="icono">
+					<img src="build/img/icono2.svg" alt="Icono precio" loading="lazy" />
+					<h3>Precio</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at
+						non, architecto facere autem quam sint ut est totam quis libero
+						quisquam adipisci error nam iure consectetur magnam. Expedita,
+						labore.
+					</p>
+				</div>
+				<div class="icono">
+					<img src="build/img/icono3.svg" alt="Icono tiempo" loading="lazy" />
+					<h3>Tiempo</h3>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque at
+						non, architecto facere autem quam sint ut est totam quis libero
+						quisquam adipisci error nam iure consectetur magnam. Expedita,
+						labore.
+					</p>
+				</div>
+			</div>
+		</section>
 
-    <main class="contenedor seccion">
-        <h1>Título Página</h1>
+		<footer class="footer seccion">
+			<div class="contenedor contenedor-footer">
+				<nav class="navegacion">
+					<a href="nosotros.html">Nosotros</a>
+					<a href="anuncios.html">Anuncios</a>
+					<a href="blog.html">Blog</a>
+					<a href="contacto.html">Contacto</a>
+				</nav>
+			</div>
+			<p class="copyright">Todos los derechos reservados 2021 &copy;</p>
+		</footer>
 
-
-    </main>
-    <footer class="footer seccion">
-        <div class="contenedor contenedor-footer">
-            <nav class="navegacion">
-                <a href="nosotros.html">Nosotros</a>
-                <a href="anuncios.html">Anuncios</a>
-                <a href="blog.html">Blog</a>
-                <a href="contacto.html">Contacto</a>
-            </nav>
-        </div>
-        <p class="copyright">Todos los derechos reservados 2021 &copy;</p>
-
-    </footer>
-
-    <script src="build/js/bundle.min.js "></script>
-
-</body>
-
+		<script src="build/js/bundle.min.js "></script>
+	</body>
 </html>
